--- a/2.1_jeunesse.Rmd
+++ b/2.1_jeunesse.Rmd
@@ -12,18 +12,18 @@ output:
 
  
 ```{r setup, include=FALSE ,echo=FALSE, cache=F} 
-library(flexdashboard)
-source("C:/Users/plebre/Documents/projets R/DRAJES/librairies.R")
-load("C:/Users/plebre/Documents/projets R/DRAJES/data/demo/basecom.RData")
-load("C:/Users/plebre/Documents/projets R/DRAJES/data/demo/tab_demo.RData")
-load("C:/Users/plebre/Documents/projets R/DRAJES/data/demo/cartes.RData")
+#library(flexdashboard)
+#source("librairies.R")
+#load("data/demo/basecom.RData")
+#load("data/demo/tab_demo.RData")
+#load("data/demo/cartes.RData")
 
 pal2 <- colorBin("YlOrBr", domain =0:100 ,bins= c(0, 12.5, 15, 17.5, 20, 100) )
 pal3 <- colorBin("RdYlBu", domain =-10:10 ,bins=c(-Inf,-2, -1, -0.5,0,0.5, 1 ,2, Inf), reverse = T)
 
 ```
 
-![](C:/Users/plebre/Documents/projets R/DRAJES/images/BFC_s.svg) Régions {data-orientation="rows" height=30}
+![](images/BFC_s.svg) Régions {data-orientation="rows" height=30}
 =======================================================================
 Row {data-height="20"}
 -----------------------------------------------------------------------
@@ -48,9 +48,9 @@ region_tab %>%
   select(Région,Nom,`15-29 ans`,`Taux<br>15/29`,`Taux<br>16/25`,delta,`evo15/29`,`evo16/25`,ind_jeun) %>%
   rename("indice jeunesse <sup>1</sup>"=ind_jeun) %>%
   mutate(" "= if_else(substr(str_split_fixed(region_tab$`evo15/29`,"<*>",3)[,2],1,4)   < 0,
-                 cell_spec('![](C:/Users/plebre/Documents/projets R/DRAJES/images/arrow-down-right.svg)',
+                 cell_spec('![](images/arrow-down-right.svg)',
                            color="red") ,
-                 cell_spec('![](C:/Users/plebre/Documents/projets R/DRAJES/images/arrow-up-right.svg)',
+                 cell_spec('![](images/arrow-up-right.svg)',
                            color="green")
                  ) ) %>%
   relocate(" ",.before=delta) %>%
@@ -92,7 +92,7 @@ leaflet(regwgs) %>% addProviderTiles(providers$CartoDB.Positron) %>%
   addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
 ```
 
-![](C:/Users/plebre/Documents/projets R/DRAJES/images/BFC_dep_s.svg) Départements {data-orientation="rows" height=30}
+![](images/BFC_dep_s.svg) Départements {data-orientation="rows" height=30}
 =======================================================================
 Row {data-height="20"}
 -----------------------------------------------------------------------
@@ -115,9 +115,9 @@ as.data.frame(dep27_tab) %>%
   select(Région,Département,Nom,`15-29 ans`,`Taux<br>15/29`,`Taux<br>16/25`,delta,`evo15/29`,`evo16/25`,ind_jeun) %>%
   rename("indice jeunesse <sup>1</sup>"=ind_jeun) %>%
   mutate(" "= if_else(substr(str_split_fixed(dep27_tab$`evo15/29`,"<*>",3)[,2],1,4)   < 0,
-                 cell_spec('![](C:/Users/plebre/Documents/projets R/DRAJES/images/arrow-down-right.svg)',
+                 cell_spec('![](images/arrow-down-right.svg)',
                            color="red") ,
-                 cell_spec('![](C:/Users/plebre/Documents/projets R/DRAJES/images/arrow-up-right.svg)',
+                 cell_spec('![](images/arrow-up-right.svg)',
                            color="green")
                  ) ) %>%
   relocate(" ",.before=delta) %>%
@@ -159,7 +159,7 @@ leaflet(depwgs) %>% addProviderTiles(providers$CartoDB.Positron) %>%
 
 
 
-![](C:/Users/plebre/Documents/projets R/DRAJES/images/BFC_EPCI_s.svg) EPCI {data-orientation="rows" height=30}
+![](images/BFC_EPCI_s.svg) EPCI {data-orientation="rows" height=30}
 =======================================================================
 Row {data-height="20"}
 -----------------------------------------------------------------------
@@ -174,9 +174,9 @@ epci27_tab %>%
   select(EPCI,Nom,`15-29 ans`,`Taux<br>15/29`,`Taux<br>16/25`,delta,`evo15/29`,`evo16/25`,ind_jeun) %>%
   rename("indice jeunesse <sup>1</sup>"=ind_jeun) %>%
   mutate(" "= if_else(substr(str_split_fixed(epci27_tab$`evo15/29`,"<*>",3)[,2],1,4)   < 0,
-                 cell_spec('![](C:/Users/plebre/Documents/projets R/DRAJES/images/arrow-down-right.svg)',
+                 cell_spec('![](images/arrow-down-right.svg)',
                            color="red") ,
-                 cell_spec('![](C:/Users/plebre/Documents/projets R/DRAJES/images/arrow-up-right.svg)',
+                 cell_spec('![](images/arrow-up-right.svg)',
                            color="green")
                  ) ) %>%
   relocate(" ",.before=delta) %>%
@@ -220,7 +220,7 @@ leaflet(epcicarto) %>% addProviderTiles(providers$CartoDB.Positron) %>%
   addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
 ```
 
-![](C:/Users/plebre/Documents/projets R/DRAJES/images/BFC_BV_s.svg) Bassins de vie {data-orientation="rows" height=30}
+![](images/BFC_BV_s.svg) Bassins de vie {data-orientation="rows" height=30}
 =======================================================================
 Row {data-height="20"}
 -----------------------------------------------------------------------
@@ -234,9 +234,9 @@ bv27_tab %>%
   select(BV2012,Nom,`15-29 ans`,`Taux<br>15/29`,`Taux<br>16/25`,delta,`evo15/29`,`evo16/25`,ind_jeun) %>%
   rename("indice jeunesse <sup>1</sup>"=ind_jeun) %>%
   mutate(" "= if_else(substr(str_split_fixed(bv27_tab$`evo15/29`,"<*>",3)[,2],1,4)   < 0,
-                 cell_spec('![](C:/Users/plebre/Documents/projets R/DRAJES/images/arrow-down-right.svg)',
+                 cell_spec('![](images/arrow-down-right.svg)',
                            color="red") ,
-                 cell_spec('![](C:/Users/plebre/Documents/projets R/DRAJES/images/arrow-up-right.svg)',
+                 cell_spec('![](images/arrow-up-right.svg)',
                            color="green")
                  ) ) %>%
   relocate(" ",.before=delta) %>%
