--- a/5.1_clubs.rmd
+++ b/5.1_clubs.rmd
@@ -13,16 +13,16 @@ output:
 
 ```{r setup, include=FALSE ,echo=FALSE, cache=F, plotly=F}
 
-library(sparkline)
+#library(sparkline)
 
 sparkline(0)
 
-load("C:/Users/plebre/Documents/projets R/DRAJES/data/sport/licences.RData")
-load("C:/Users/plebre/Documents/projets R/DRAJES/data/sport/clubs.RData")
+load("data/sport/licences.RData")
+load("data/sport/clubs.RData")
+load("data/sport/spark.RData")
 
-load("C:/Users/plebre/Documents/projets R/DRAJES/data/demo/basecom.RData")
-load("C:/Users/plebre/Documents/projets R/DRAJES/data/demo/cartes.RData")
-load("C:/Users/plebre/Documents/projets R/DRAJES/data/sport/spark.RData")
+#load("C:/Users/plebre/Documents/projets R/DRAJES/data/demo/basecom.RData")
+#load("C:/Users/plebre/Documents/projets R/DRAJES/data/demo/cartes.RData")
 
 regsexe <- as.data.frame(t(lic_reg_sexe)) %>%  rownames_to_column() %>% select(1,17,18) %>% mutate(txfem=100*as.numeric(V16)/as.numeric(V17)) %>% slice(3:16)
 
@@ -43,7 +43,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-![](C:/Users/plebre/Documents/projets R/DRAJES/images/BFC_s.svg) Régions {data-orientation="rows" height=30}
+![](images/BFC_s.svg) Régions {data-orientation="rows" height=30}
 =======================================================================
 Row {data-height="20"}
 -----------------------------------------------------------------------
@@ -338,7 +338,7 @@ hchart(club_reg  %>% select(fede=2,bfc="27",FR="...22") %>% slice(93:116) %>%
 
 
 
-![](C:/Users/plebre/Documents/projets R/DRAJES/images/BFC_dep_s.svg) Départements {data-orientation="rows" height=30}
+![](images/BFC_dep_s.svg) Départements {data-orientation="rows" height=30}
 =======================================================================
 Row {data-height="20"}
 -----------------------------------------------------------------------
@@ -598,7 +598,7 @@ club_dep %>%  dplyr::select(1:2,depbfc) %>% rename("Code fédération"="...1","F
 ```
 
 
-![](C:/Users/plebre/Documents/projets R/DRAJES/images/BFC_EPCI_s.svg) EPCI {data-orientation="rows" height=30}
+![](images/BFC_EPCI_s.svg) EPCI {data-orientation="rows" height=30}
 =======================================================================
 Row {data-height="20"}
 -----------------------------------------------------------------------
@@ -691,7 +691,7 @@ addLegend( position = "bottomright",pal = pallic ,title = "taux de pénétration
 ```
 
 
-![](C:/Users/plebre/Documents/projets R/DRAJES/images/BFC_BV_s.svg) Bassins de vie {data-orientation="rows" height=30}
+![](images/BFC_BV_s.svg) Bassins de vie {data-orientation="rows" height=30}
 =======================================================================
 Row {data-height="20"}
 -----------------------------------------------------------------------
